# ExpressionTemplates

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake  expression_template-config.cmake
docs/: CMakeLists.txt  Doxyfile.in  License.md  License.rst  conf.py  expressions.rst  index.rst  map.md  map.rst  reduce.md  reduce.rst  zip.md  zip.rst
include/: base_expression.h  elementwise_binary_operators.h  elementwise_unary_operators.h  expr_template.h  expr_template_reduced.h  exprspan.h  extents_utils.h  matrix.h  matrix_multiplication_expression.h  matrix_reduced.h  mdarray.h  naive.h  scalar_reduce_operators.h  slice_expression.h  transpose_expression.h
test/: CMakeLists.txt  clang_crash.cpp  matmul_test.cpp  matrix_test.cpp  mdarray_test.cpp  perf_test.cpp  reduce_test.cpp  transpose_test.cpp
